<resources>
    <string name="app_name">ExamenCristinaRamos</string>
    <string name="calculadora">Calculadora</string>

    <string name="add">+</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="minus">-</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="multi">x</string>
    <string name="one">1</string>
    <string name="tree">3</string>
    <string name="two">2</string>
    <string name="percent">%</string>
    <string name="zero">0</string>
    <string name="equal">=</string>
    <string name="div">/</string>

    <!-- Mensajes para el usuario -->

    <string name="chooseNumber">Elige un número</string>
    <string name="chooOperator">Elige una operación</string>
    <string name="mendrugo">Lo haces mal tontito</string>

    <string name="faltaNumero">Elige un número, ¡zoquete!</string>
    <string name="fataOperacion">Elige una operación, ¡zoquete!</string>
    <string name="faltaEligual">Que le des al igual ¡zoquete!</string>
    <string name="mendrugovis">Pero a ver, que te faltas cosas loquete</string>


</resources>