<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tituloCalculadora"
        style="@style/Calculadora"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:paddingVertical="10dp"
        android:text="@string/calculadora"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/instrucciones"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:text="@string/chooseNumber"
        android:textColor="@color/black"
        android:textSize="24dp"
        app:layout_constraintBottom_toTopOf="@id/cuerpoCalculadora"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tituloCalculadora"></TextView>

    <LinearLayout
        android:id="@+id/cuerpoCalculadora"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="@+id/instrucciones">

        <TextView
            style="@style/resultadoMostrar"
            android:id="@+id/resultado"
            android:layout_width="332dp"
            android:layout_height="80dp"
            android:layout_marginBottom="24dp"
            android:background="@color/grey"
            android:fontFamily="sans-serif-black"
            android:textColor="@color/black"></TextView>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/btnAdd"
                style="@style/calculadoraBotonoes"
                android:text="@string/add" />

            <TextView
                android:id="@+id/bt7"
                style="@style/calculadoraBotonoes"
                android:text="@string/seven" />

            <TextView
                android:id="@+id/bt8"
                style="@style/calculadoraBotonoes"
                android:text="@string/eight" />

            <TextView
                android:id="@+id/bt9"
                style="@style/calculadoraBotonoes"
                android:text="@string/nine" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/btnMinus"
                style="@style/calculadoraBotonoes"
                android:text="@string/minus" />

            <TextView
                android:id="@+id/bt4"
                style="@style/calculadoraBotonoes"
                android:text="@string/four" />

            <TextView
                android:id="@+id/bt5"
                style="@style/calculadoraBotonoes"
                android:text="@string/five" />

            <TextView
                android:id="@+id/bt6"
                style="@style/calculadoraBotonoes"
                android:text="@string/six" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/btnMulti"
                style="@style/calculadoraBotonoes"
                android:text="@string/multi" />

            <TextView
                android:id="@+id/bt1"
                style="@style/calculadoraBotonoes"
                android:text="@string/one" />

            <TextView
                android:id="@+id/bt2"
                style="@style/calculadoraBotonoes"
                android:text="@string/two" />

            <TextView
                android:id="@+id/bt3"
                style="@style/calculadoraBotonoes"
                android:text="@string/tree" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/btnDiv"
                style="@style/calculadoraBotonoes"
                android:text="@string/div" />

            <TextView
                android:id="@+id/btnPercent"
                style="@style/calculadoraBotonoes"
                android:text="@string/percent" />

            <TextView
                android:id="@+id/bt0"
                style="@style/calculadoraBotonoes"
                android:text="@string/zero" />

            <TextView
                android:id="@+id/btnIgual"
                style="@style/calculadoraBotonoes"
                android:text="@string/equal" />
        </LinearLayout>


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>